# Command_IQ

./: .gitignore  README.md  install_ciq.sh  pyproject.toml  requirements.txt
src/cli/: main.py  predict.py
